@@ -1,3 +1,7 @@
+2006-01-23 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b3
+
+ * Fix: setup/session_test.php didnt work correct with register globals off.
+
 2006-01-22 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b2
 
  * Change: RFE #1193290
